--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
+    "sass": "^1.90.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
