adding test cases on both frontend and backend files

--- a/server/package.json
+++ b/server/package.json
@@ -20,5 +20,8 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.2",
     "multer": "^2.0.2"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.4"
   }
 }
