--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,16 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-masonry-css": "^1.0.16",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.90.0",
+    "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.55.0"
   }
 }
