--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://shrutikarne:firstPassword@recipe-share-cluster.aqlxzck.mongodb.net/?retryWrites=true&w=majority&appName=recipe-share-cluster
-JWT_SECRET=your_secret_key
+MONGO_URI=
+JWT_SECRET=
 PORT=5000
