--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "sass": "^1.90.0",
     "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
