--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,6 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 FACEBOOK_APP_ID=your_facebook_app_id
 FACEBOOK_APP_SECRET=your_facebook_app_secret
 CLIENT_URL=http://localhost:3000
-MONGO_URI=mongodb+srv://shrutikarne:firstPassword@recipe-share-cluster.aqlxzck.mongodb.net/?retryWrites=true&w=majority&appName=recipe-share-cluster
-JWT_SECRET=your_secret_key
+MONGO_URI=
+JWT_SECRET=
 PORT=5000
