--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # Never commit .env files or other secrets to version control!
 .env
 .env.*
+
+# Ignore node_modules in all subdirectories
+node_modules/
+server/node_modules/
+client/node_modules/
