--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "RecipeShare",
+  "name": "Recipe Share",
+  "description": "Discover, share, and save your favorite recipes. Quick meals, healthy twists, and sweet treats for every mood!",
   "icons": [
     {
       "src": "favicon.ico",
@@ -16,10 +17,18 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "default-avatar.png",
+      "type": "image/png",
+      "sizes": "128x128"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#FF7043",
+  "background_color": "#F5F5F5",
+  "orientation": "portrait",
+  "lang": "en",
+  "scope": "."
 }
